--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "axios": "^1.6.8",
     "framer-motion": "^11.1.7",
+    "js-cookie": "^3.0.5",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.1.0"
+    "react-hook-form": "^7.51.4",
+    "react-icons": "^5.1.0",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "postcss": "^8",
